@@ -13,7 +13,7 @@
             <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/textAuthors" android:text="@string/author_string" android:padding="5dip"></TextView>
         </LinearLayout>
     </LinearLayout>
-   <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textHelp" android:padding="10dip" android:text="@string/help_string"></TextView>
+   <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textHelp" android:text="@string/help_string" android:paddingLeft="10dip" android:paddingRight="10dip"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/buttonLayout" android:padding="10dip" android:orientation="horizontal">
        <Button android:id="@+id/okButton" android:layout_height="wrap_content" android:text="      OK      " android:layout_width="fill_parent"></Button>
    </LinearLayout>
